# ArabicRomanConverter

./: CMakeLists.txt  README.md  Roman_Arabic_conv.cpp  Roman_Arabic_conv.h  Rzymskie.sln  Rzymskie.vcxproj  Rzymskie.vcxproj.filters  main.cpp
RomanArabicConverter/: CMakeLists.txt  Roman_Arabic_conv.cpp  Roman_Arabic_conv.h
tests/: CMakeLists.txt  CorrectValuesTests.cpp  WrongValuesTests.cpp  converterTests.cpp
